# learning-django

./: .gitignore  README.md  pyproject.toml
mysite/mysite/: settings.py  urls.py
mysite/polls/: models.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py
