[tool.poetry]
name = "learning-django"
version = "0.1.0"
description = ""
authors = ["Kip Yin <28321392+kipyin@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0"

[tool.poetry.dev-dependencies]


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
